# penelope-bot

./: .gitignore  Makefile  README.md  docker-compose.yml
common/: .gitignore  CMakeLists.txt
common/src/: model.cpp  model.h  natscommunication.cpp  natscommunication.h
common/tests/: tests.cpp
data-manager/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
data-manager/src/: DataManager.cpp  DataManager.h  Model.cpp  Model.h  data_manager.cpp  data_manager.h
data-manager/tests/: Makefile  nats-producer.py
dns-resolver/: requirements.txt  resolver.py
downloader/: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  main.cpp
downloader/cmake/: Findhiredis.cmake  Findrdkafka.cmake
downloader/src/: Downloader.cpp  Downloader.h  KafkaReader.cpp  KafkaReader.h  NatsProducer.cpp  NatsProducer.h  NatsReceiver.cpp  NatsReceiver.h  QueueManager.cpp  QueueManager.h
downloader/tests/: Makefile  nats-producer.py  nats-receiver.py
jsdownloader/: Dockerfile  downloader.py  test.py
parser/: CMakeLists.txt  Dockerfile  main.cpp
parser/src/: Parser.cpp  Parser.h
parser/tests/: Makefile  nats-producer.py
python-data-manager/: Dockerfile  main.py  requirements.txt
python-data-manager/datamanager/: datamanager.py
